2013-03-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR1346: Filter out -j option to make
	* Makefile.am:
	(ICEDTEA_MAKE): Remove -j flag if present
	as OpenJDK build chokes on it.
	(ICEDTEA_ENV): Set JOBS to value of ${PARALLEL_JOBS}.
	(icedtea): Use ICEDTEA_MAKE.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	* NEWS: Updated.

2013-03-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Bump to OpenJDK b80.
	* generated/com/sun/accessibility/internal/resources/accessibility.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_de.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_en.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_es.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_fr.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_it.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_ja.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_ko.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_sv.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_zh_CN.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_zh_HK.java,
	* generated/com/sun/accessibility/internal/resources/accessibility_zh_TW.java,
	* generated/com/sun/corba/se/PortableActivationIDL/Activator.java,
	* generated/com/sun/corba/se/PortableActivationIDL/ActivatorHelper.java,
	* generated/com/sun/corba/se/PortableActivationIDL/ActivatorHolder.java,
	* generated/com/sun/corba/se/PortableActivationIDL/ActivatorOperations.java,
	* generated/com/sun/corba/se/PortableActivationIDL/BadServerDefinition.java,
	* generated/com/sun/corba/se/PortableActivationIDL/BadServerDefinitionHelper.java,
	* generated/com/sun/corba/se/PortableActivationIDL/BadServerDefinitionHolder.java,
	* generated/com/sun/corba/se/PortableActivationIDL/EndPointInfo.java,