@@ -1139,10 +1139,12 @@ AC_DEFUN([IT_CHECK_FOR_JDK],
   if test -z "${SYSTEM_JDK_DIR}"; then
     if test "x${enable_bootstrap}" = "xyes"; then
       BOOTSTRAP_VMS="/usr/lib/jvm/java-gcj /usr/lib/jvm/gcj-jdk /usr/lib/jvm/cacao";
+    else
+      ICEDTEA6_VMS="/usr/lib/jvm/icedtea6 /usr/lib/jvm/java-6-openjdk"
     fi
-    for dir in ${BOOTSTRAP_VMS} /usr/lib/jvm/java-openjdk \
-    	       /usr/lib/jvm/icedtea6 /usr/lib/jvm/java-6-openjdk \
-	       /usr/lib/jvm/openjdk /usr/lib/jvm/java-icedtea ; do
+    ICEDTEA7_VMS="/usr/lib/jvm/icedtea7 /usr/lib/jvm/java-1.7.0-openjdk"
+    for dir in ${BOOTSTRAP_VMS} ${ICEDTEA7_VMS} ${ICEDTEA6_VMS} \
+    	       /usr/lib/jvm/java-openjdk /usr/lib/jvm/openjdk /usr/lib/jvm/java-icedtea ; do
        if test -d $dir; then
          SYSTEM_JDK_DIR=$dir
 	 break
