@@ -1,3 +1,10 @@
+2011-09-27  Andrew John Hughes  <ahughes@redhat.com>
+
+	* acinclude.m4:
+	(AC_CHECK_FOR_JDK): Look for IcedTea7 JDKs.
+	Don't check for IcedTea6 JDKs when bootstrapping
+	until PR716 is fixed.
+
 2013-03-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR1346: Filter out -j option to make
